# stac-factory

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NOTES  README.md  TODO  TODO.md  main.py  noxfile.py  pymarkdown.json  pyproject.toml  scratch.txt
.github/workflows/: ci.yml  release.yml
phil_stac/: models.py
stac_factory/: constants.py  models.py
stac_factory/cli/: __main__.py
tests/: test_1.py  test_cli.py  test_item.py  test_models.py
tests/fixtures/: S2B_T01WCR_20250427T000611_L2A.json  S2B_T38XNF_20250422T091553_L2A.json  inprogress copy.json  inprogress.json  invalid.json  item_with_extensions.json  minmal.json  typical.json
