[project]
name = "stac-factory"
version = "0.1.0"
description = "Refined Pydantic models for constructing STAC Items"
readme = "README.md"
authors = [{ name = "Phil Varner", email = "philvarner@gmail.com" }]
maintainers = [{ name = "Phil Varner", email = "philvarner@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.3",
    "antimeridian>=0.4.1",
    "shapely>=2.1.0",
    # "jsonschema>=4.19.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest>=8",
    "pytest-cov>=4.1.0",
    # "types-jsonschema>=4.19.0.3",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "nox>=2024.4.15",
    "pymarkdownlnt>=0.9.25",
    # "pyrfc3339>=1.1",
    # "types-pyRFC3339>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "-sv --cov stac_factory --cov-report xml --cov-report term-missing  --cov-fail-under 85"

[tool.mypy]
ignore_missing_imports = true
exclude = ["tests", ".venv"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = []
