[project]
name = "stac-factory"
version = "0.1.0"
description = "Refined Pydantic models for constructing STAC Items"
readme = "README.md"
authors = [{ name = "Phil Varner", email = "philvarner@gmail.com" }]
maintainers = [{ name = "Phil Varner", email = "philvarner@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.15.0",
    "nox>=2024.4.15",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pymarkdownlnt>=0.9.25",
    "pystac>=1.13.0",
    "pytest>=8",
    "pytest-cov>=4.1.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.0",
    # "types-jsonschema>=4.19.0.3",
    # "pyrfc3339>=1.1",
    # "types-pyRFC3339>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "-sv --cov stac_factory --cov-report html --cov-report term --cov-fail-under 99"

[tool.mypy]
ignore_missing_imports = true
exclude = ["tests", ".venv"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    "D",       #  doc
    "PLR2004", # magic values, exclude for tests
    "ERA001",  # commented code
    "FIX",     # todo
    "TD",      # todo
    "EM",
    "TRY",
    "PLR0913",
    "A002",    # fix builtin shadowing
    "COM812",
]

exclude = []

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402']
'**/tests/**/*' = ['T201', 'S101']

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.pymarkdown]
plugins.md013.line_length = 120

[tool.vulture]
ignore_names = ["cls"]
min_confidence = 80
sort_by_size = true
# verbose = true
